[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.cw20-vesting-airdrop]
codegen-units = 1
incremental = false

[profile.release.package.cw20-vesting]
codegen-units = 1
incremental = false

[profile.release.package.wynd-decisions]
codegen-units = 1
incremental = false

[profile.release.package.wynd-distribution]
codegen-units = 1
incremental = false

[profile.release.package.wynd-stake]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
