[workspace]
members = ["packages/*", "contracts/*"]

[workspace.package]
version    = "1.6.0"
edition    = "2021"
repository = "https://github.com/cosmorama/wynddao"
license    = "Apache-2.0"

[workspace.dependencies]
anyhow                  = "1"
cosmwasm-schema         = "1.1"
cosmwasm-std            = "1.1"
cw2                     = "0.16"
cw4                     = "0.16"
cw4-group               = "0.16"
cw4-voting              = { git = "https://github.com/cosmorama/dao-contracts.git", tag = "v1.1.1" }
cw20                    = "0.16"
cw20-base               = "0.16"
cw20-vesting            = { version = "1.6", path = "./contracts/cw20-vesting", features = ["library"] }
cw-controllers          = "0.16"
cw-core                 = { git = "https://github.com/cosmorama/dao-contracts.git", tag = "v1.1.1" }
cw-core-macros          = { git = "https://github.com/cosmorama/dao-contracts.git", tag = "v1.1.1" }
cw-core-interface       = { git = "https://github.com/cosmorama/dao-contracts.git", tag = "v1.1.1" }
cw-multi-test           = "0.16"
cw-proposal-single      = { git = "https://github.com/cosmorama/dao-contracts.git", tag = "v1.1.1" }
cw-storage-plus         = "0.16"
cw-utils                = "0.16"
schemars                = "0.8"
semver                  = "1"
serde                   = { version = "1", default-features = false, features = ["derive"] }
test-case               = "2"
testing                 = { git = "https://github.com/cosmorama/dao-contracts.git", tag = "v1.1.1" }
thiserror               = "1"
voting                  = { git = "https://github.com/cosmorama/dao-contracts.git", tag = "v1.1.1" }
wynd-stake              = { version = "1.6", path = "./contracts/wynd-stake", features = ["library"] }
wynd-utils              = { version = "1.6", path = "./packages/utils" }

[profile.release.package.cw20-vesting-airdrop]
codegen-units = 1
incremental = false

[profile.release.package.cw20-vesting]
codegen-units = 1
incremental = false

[profile.release.package.gauge-orchestrator]
codegen-units = 1
incremental = false

[profile.release.package.wynd-decisions]
codegen-units = 1
incremental = false

[profile.release.package.wynd-distribution]
codegen-units = 1
incremental = false

[profile.release.package.wynd-stake]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
