[package]
name = "cw20-vesting-airdrop"
version = "0.4.1"
authors = ["Cosmorama <cosmorama@proton.me>", "Orkun Kulce <orkunkl@users.noreply.github.com>", "Terraform Labs, PTE."]
edition = "2018"
description = "An Airdrop contract for allowing users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw20-vesting = { version = "0.4.1", path = "../cw20-vesting", features = ["library"] }
wynd-utils = { version = "0.4.1", path = "../../packages/utils" }
cw-utils = { version = "0.13.1" }
cw2 = { version = "0.13.1" }
cw20 = { version = "0.13.1" }
cosmwasm-std = { version = "1.0.0-beta" }
cw-storage-plus = { version = "0.13.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta"
serde_json = "1.0"
