[package]
name = "cw20-vesting"
version = "1.2.0"
authors = ["Cosmorama <cosmorama@proton.me>"]
license = "Apache-2.0"
description = "Extend cw20-base to add vesting times to tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
wynd-utils = { path = "../../packages/utils", version = "1.2.0" }
cw-utils = "0.15"
cw2 = "0.15"
cw20 = "0.15"
cw-storage-plus = "0.15"
cosmwasm-std = "1.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.23"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.1"
cw-multi-test = "0.15"
cw20-vesting-0_4_1 = { package = "cw20-vesting", version = "0.4.1" }
