[package]
name = "cw20-vesting"
version = { workspace = true }
authors = ["Cosmorama <cosmorama@proton.me>"]
license = { workspace = true }
description = "Extend cw20-base to add vesting times to tokens"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wynd-utils = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
cw20-vesting-1_1_0 = { package = "cw20-vesting", git = "https://github.com/cosmorama/wynddao", version = "1.1.0" }
wynd_utils-1_1_0 = { package = "wynd-utils", git = "https://github.com/cosmorama/wynddao", version = "1.1.0" }
