[package]
name = "wynd-decisions"
version = "0.4.1"
authors = ["Cosmorama <cosmorama@proton.me>"]
license = "Apache-2.0"
description = "Record decisions taken my a multisig or DAO"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta7" }
cosmwasm-storage = { version = "1.0.0-beta7" }
cw-storage-plus = "0.13"
cw-utils = "0.13"
cw2 = "0.13"
schemars = "0.8"
semver = "1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta7" }
