[package]
name = "wynd-decisions"
version = "0.6.0"
authors = ["Cosmorama <cosmorama@proton.me>"]
license = "Apache-2.0"
description = "Record decisions taken by a multisig or DAO"
repository = "https://github.com/cosmorama/wynd-contracts"
homepage = "https://www.wynddao.com"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-storage = "1.1"
cw-storage-plus = "0.15"
cw-utils = "0.15"
cw2 = "0.15"
schemars = "0.8"
semver = "1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.1"
