[package]
name = "wynd-distribution"
version = "1.1.0"
authors = [
  "Cosmorama <cosmorama@proton.me>",
  "Christoph Otter <chris@confio.gmbh>",
]
edition = "2021"
description = "A contract that distributes a configured amount of cw20 tokens in configured time increments"
license = "Apache-2.0"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-storage = "1.1"
cw-storage-plus = "0.15"
cw20 = "0.15"
cw2 = "0.15"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.23"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.1"
cw-multi-test = "0.15"
cw20-base = "0.15"
