[package]
name = "wynd-distribution"
version = { workspace = true }
authors = [
  "Cosmorama <cosmorama@proton.me>",
  "Christoph Otter <chris@confio.gmbh>",
]
edition = { workspace = true }
description = "A contract that distributes a configured amount of cw20 tokens in configured time increments"
license = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
cw20-base = { workspace = true }
