[package]
name = "wynd-stake"
version = { workspace = true }
authors = ["Cosmorama <cosmorama@proton.me>"]
edition = { workspace = true }
description = "Multi-timeframe staking contract with rewards to power cw3 voting"
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true }
cw-core-macros = { workspace = true }
cw-core-interface = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw4 = { workspace = true }
cw20 = { workspace = true }
cw20-vesting = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-core = { workspace = true }
cw-multi-test = { workspace = true }
cw-proposal-single = { workspace = true }
cw20 = { workspace = true }
test-case = { workspace = true }
testing = { workspace = true }
voting = { workspace = true }
wynd-utils = { workspace = true }
